@@ -2,6 +2,7 @@ PZS-NG CHANGELOG
 ----------------
 
 v1.2.0  --> 1.2.x :
+		- Enhance AutoOp sitebot plugin to handle any availible IRC mode. Renamed to AutoIRCFlag.
 		- Fixed bug #535: !bnc command failing to parse ping reply on BSD
 		- Fix deletion of .message when deleting a dir (fixed by DuReX)
 		- Fix ng-chown being unable to change usernames when a user_name was given (thanks to tittof for noticing)
